<resources>
    <string name="app_name_new">Agroषधि</string>
    <string name="app_tagline">Towards Ethnic उपचार</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Hello</string>
    <string name="default_web_client_id">756726594856-l979s32koj3cjutmcci595qbmkgeh0fa.apps.googleusercontent.com</string>
    <string name="title_user_info">User\'s Info</string>
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_area_since">Living in the area since</string>
    <string name="hint_aadhar_number">Aadhar Number</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_address">Address</string>
    <string name="hint_pan_number">PAN Number</string>
    <string name="button_submit">Submit</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="enter_details">Enter the details!</string>
    <string name="hint_drug_name">Enter the drug name</string>
    <string name="hint_scientific_name">Scientific Name</string>
    <string name="hint_how_to_apply">How to Apply</string>
    <string name="hint_medicinal_plants">Data about medicinal plants</string>
    <string name="hint_mode_of_preparation">Mode of preparation</string>
    <string name="is_viable">Is Viable</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hint_years_used_since">Years used since</string>
    <string name="send">SEND</string>
    <string name="profile">PROFILE</string>
    <string name="action_change_language">Language</string>
    <string name="menu_language">Language</string>
    <string name="menu_english">English</string>
    <string name="menu_assamese">Assamese</string>
    <string name="hint_living_area_since">Living in area since</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="assamese">Assamese</string>
    <string name="select_language_button">Select Button</string>
    <string name="drugs">Drugs</string>
    <string name="title_activity_people_list">Users List</string>
    <string name="name_missing">Name is missing :(</string>
    <string name="nothing_here">There is nothing here</string>
    <string name="title_activity_home_dummy">Home</string>
    <string name="auth_features">• Google Sign-In\n• Two-factor authentication\n• Password recovery options\n• Secure login</string>
    <string name="language_change_features">• English and Assamese support\n• Seamless language switch\n• Localized content\n• Improved accessibility</string>
    <string name="profile_section_features">• View and edit profile\n• Upload profile picture\n• Manage personal information\n• Update contact details</string>
    <string name="drug_list_features">• List of all added drugs\n• Detailed drug information\n• Drug interactions\n• Dosage instructions</string>
    <string name="authentication">Authentication</string>
    <string name="language_change">Language Change</string>
    <string name="profile_section">Profile Section</string>
    <string name="search_hint">Search...</string>
    <string name="default_search_hint">Search in Agroषधि</string>
    <string name="welcome_message">Welcome to Agroषधि</string>
    <string name="quick_services">Quick Services</string>
    <string name="new_user">New User</string>
    <string name="new_drug">New Drug</string>
    <string name="check_status">Check Status</string>
    <string name="drug_list">Drug List</string>
    <string name="users">Users</string>
    <string name="add_drug">Add Drug</string>
    <string name="status">Status</string>
    <string name="newsletter">Newsletter</string>
    <string name="transactions">Transactions</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="name_hint">Name</string>
    <string name="age_hint">Age</string>
    <string name="aadhar_hint">Aadhar Number</string>
    <string name="phone_hint">Phone Number</string>
    <string name="pan_hint">PAN Number</string>
    <string name="address_hint">Address</string>
    <string name="area_since_hint">Area Since</string>
    <string name="select_image">Select Image</string>
    <string name="drugs_added">Drugs Added</string>
    <string name="users_list">Users List</string>
    <string name="drug_details">Drug Details</string>
    <string name="no_drugs_available">No drugs available</string>
    <string name="aarogya_mitra">Translated Aarogya Mitra: </string>
    <string name="name">Name: </string>
    <string name="how_to_apply">Translated How to Apply: </string>
    <string name="medicinal_plants">Translated Medicinal Plants: </string>
    <string name="mode_of_preparation">Translated Mode of Preparation: </string>
    <string name="scientific_name">Translated Scientific Name: </string>
    <string name="years_used_since">Translated Years Used Since: </string>
    <string name="not_available">Translated Not available</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="help_and_support">Help and Support</string>
    <string name="about_us">About Us</string>
    <string name="email">Email:</string>
    <string name="search">Email:</string>
    <string name="list_of_plants">List of Plants</string>
    <string name="vernacular_name">Vernacular Name</string>
    <string name="scientific_Name">Scientific Name:</string>
    <string name="photograph">Photograph</string>
    <string name="medicinal_use">Medicinal Use:</string>
    <string name="medicinal_use_value">Medicinal Use Value</string>
</resources>
