<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="@string/app_name_new"/>



    <!-- Options Menu Icon -->
    <ImageView
        android:id="@+id/optionsMenuIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@id/toolbar"
        android:padding="8dp"/>

    <!-- User Tile -->
    <Button
        android:id="@+id/userTile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/users"/>

    <!-- Drug Tile -->
    <Button
        android:id="@+id/drugTile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_toEndOf="@id/userTile"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/drugs"/>

    <!-- Status Tile -->
    <Button
        android:id="@+id/statusTile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userTile"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/status"/>

    <!-- New User Tile -->
    <Button
        android:id="@+id/newUserTile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userTile"
        android:layout_toEndOf="@id/statusTile"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/new_user"/>

    <!-- New Drug Tile -->
    <Button
        android:id="@+id/newDrugTile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statusTile"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/new_drug"
        android:layout_marginEnd="16dp"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
