<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#ffffff">

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextView"
        android:hint="@string/address_hint" />

    <EditText
        android:id="@+id/editTextAreaSince"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextView"
        android:hint="@string/area_since_hint" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/next"
        style="@style/ButtonStyle2"/>

</LinearLayout>
