<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/enter_details"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/drugNameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/drugNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_drug_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/scientificNameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/drugNameTextInputLayout"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/ScientificNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_scientific_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/howToApplyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/scientificNameTextInputLayout"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/howToApplyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_how_to_apply" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/medicinalPlantsTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/howToApplyTextInputLayout"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/medicinalPlantsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_medicinal_plants" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/modeOfPreparationTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/medicinalPlantsTextInputLayout"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/modeOfPreparationEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_mode_of_preparation" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/modeOfPreparationTextInputLayout"
                android:layout_marginTop="16dp"
                android:paddingLeft="25dp"
                android:text="@string/is_viable"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/viableRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewRadioGroup"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yesRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/noRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewRadioGroup"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/yesRadioButton"
                    android:text="@string/no" />

            </RadioGroup>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/yearsUsedTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/viableRadioGroup"
                android:layout_marginTop="16dp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/yearsUsedEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_years_used_since"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/livingAreaSinceTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/yearsUsedTextInputLayout"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/livingAreaSinceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_living_area_since"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/livingAreaSinceTextInputLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:text="@string/send" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imageRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sendButton"
                android:layout_marginTop="16dp"
                android:visibility="invisible"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3" />

            <Button
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sendButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:text="@string/select_image" />


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

